docs/0.7/_sources/api/gammapy.maps.MapGeom.rst.txt
MapGeom
=======

.. currentmodule:: gammapy.maps

.. autoclass:: MapGeom
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapGeom.center_coord
      ~MapGeom.center_pix
      ~MapGeom.center_skydir
      ~MapGeom.is_allsky

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapGeom.contains
      ~MapGeom.contains_pix
      ~MapGeom.coord_to_idx
      ~MapGeom.coord_to_pix
      ~MapGeom.coord_to_tuple
      ~MapGeom.crop
      ~MapGeom.downsample
      ~MapGeom.from_hdulist
      ~MapGeom.get_coord
      ~MapGeom.get_idx
      ~MapGeom.make_bands_hdu
      ~MapGeom.pad
      ~MapGeom.pix_to_coord
      ~MapGeom.pix_to_idx
      ~MapGeom.read
      ~MapGeom.to_cube
      ~MapGeom.to_image
      ~MapGeom.to_slice
      ~MapGeom.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: center_coord
   .. autoattribute:: center_pix
   .. autoattribute:: center_skydir
   .. autoattribute:: is_allsky

   .. rubric:: Methods Documentation

   .. automethod:: contains
   .. automethod:: contains_pix
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: coord_to_tuple
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: from_hdulist
   .. automethod:: get_coord
   .. automethod:: get_idx
   .. automethod:: make_bands_hdu
   .. automethod:: pad
   .. automethod:: pix_to_coord
   .. automethod:: pix_to_idx
   .. automethod:: read
   .. automethod:: to_cube
   .. automethod:: to_image
   .. automethod:: to_slice
   .. automethod:: upsample
